# BernsteinBijectors

./: BernsteinBijector.py  LICENSE  README.md  VI.py  VI_BP.ipynb  bernstein_routines.py  pyproject.toml  vi_routines.py  vi_routines_BP.py
examples/: VI.py  VI_BP.ipynb  vi_routines.py
src/bernsteinbijectors/: BernsteinBijector.py  __init__.py  bernsteinbijector.py
